--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="description" content="">
@@ -9,6 +9,7 @@
 
 		<!-- build:css styles/vendor.css -->
 		<!-- bower:css -->
+		<link rel="stylesheet" href="/bower_components/magnific-popup/dist/magnific-popup.css" />
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -120,7 +121,11 @@
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<article>
 						<h3>General Motivation</h3>
-						<p>I serve my purpose</p>
+						<p>At this point my motivation to do my job and to look for a new one in the Netherlands is storng will to immigrate, and what is more important, my desire to participate in development of products which aim to make peoples life better using power of design and technology.</p>
+						<p>My work experince is all about finding the way I could be more useful and inspired. I had started with nursing at city hospital, when my dream was to became addiction psychiatrists. Being high school student I switched to fashion design. Then I got my associates degree in it and worked at fashion design studio, where I realized my need in consistency in design and passion to technology.</p>
+						<p>After I left my job in fashion design I started career of web and graphic designer on freelance and moved on. Working on different task with different people helped me to develop the way I could understand other's and explain my own thoughts better. By now I have experience in both web and mobile design for business and entertainment. I developd very practical understanding of design and management tools and practices. I'm permanently mastering my knowledge in wide range of fields.</p>
+						<p>While working in teams with great professionals I learned a lot about front-end development and practicies in it. Practiced it from small fixes to landings with simple interactions designed in browser.</p>
+						<p>I also gain a lot of experience in project management, which is important for me as an UI/UX designer, because both of those specialisations involves deep understanding of project and effective communication with team.</p>
 					</article>
 				</div>
 			</div>
@@ -157,6 +162,63 @@
 									</div>
 								</div>
 								<!-- end position -->
+								<div class="col-xs-12 portfolio">
+									<div class="row">
+										<h5 class="col-xs-12">Projects portfolio</h5>
+										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+											<ul class="row msnr-gallery-grid">
+													<!-- portfolio thumbnail -->
+													<li class="col-xs-4 col-sm-4 col-md-4 col-lg-4 item">
+														<a href="#" class="thumbnail mfp-popup">
+															<img data-src="holder.js/90x90" width="90" height="90" class="img-responsive" alt="">
+															<h6>Project Name</h6>
+														</a>
+													</li>
+													<!-- end portfolio thumbnail -->
+													<!-- portfolio thumbnail -->
+													<li class="col-xs-4 col-sm-4 col-md-4 col-lg-4 item">
+														<a href="#" class="thumbnail image-link" target="_blank">
+															<img data-src="holder.js/90x90" width="90" height="90" class="img-responsive" alt="">
+															<h6>Project Name</h6>
+														</a>
+													</li>
+													<!-- end portfolio thumbnail -->
+													<!-- portfolio thumbnail -->
+													<li class="col-xs-4 col-sm-4 col-md-4 col-lg-4 item">
+														<a href="#" class="thumbnail mfp-popup">
+															<img data-src="holder.js/90x90" width="90" height="90" class="img-responsive" alt="">
+															<h6>Project Name</h6>
+														</a>
+													</li>
+													<!-- end portfolio thumbnail -->
+													<!-- portfolio thumbnail -->
+													<li class="col-xs-4 col-sm-4 col-md-4 col-lg-4 item">
+														<a href="#" class="thumbnail mfp-gallery">
+															<img data-src="holder.js/90x90" width="90" height="90" class="img-responsive" alt="">
+															<h6>Project Name</h6>
+														</a>
+													</li>
+													<!-- end portfolio thumbnail -->
+													<!-- portfolio thumbnail -->
+													<li class="col-xs-4 col-sm-4 col-md-4 col-lg-4 item">
+														<a href="#" class="thumbnail image-link" target="_blank">
+															<img data-src="holder.js/90x90" width="90" height="90" class="img-responsive" alt="">
+															<h6>Project Name</h6>
+														</a>
+													</li>
+													<!-- end portfolio thumbnail -->
+													<!-- portfolio thumbnail -->
+													<li class="col-xs-4 col-sm-4 col-md-4 col-lg-4 item">
+														<a href="#" class="thumbnail image-link" target="_blank">
+															<img data-src="holder.js/90x90" width="90" height="90" class="img-responsive" alt="">
+															<h6>Project Name</h6>
+														</a>
+													</li>
+													<!-- portfolio thumbnail -->
+											</ul>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 						<!-- end employer -->
@@ -166,7 +228,8 @@
 								<li class="row project">
 									<div class="col-xs-12 col-sm-6 col-md-6 project-description">
 										<h5>Disney CIS Development &amp; Support</h5> — <p>design, development and support of websites for marketing campaigns; development of web applications for internal use. It is ongoing project now</p>
-										<p>Role: Project Manager, Web Designer</p>
+										<p><h6>Role:</h6> Project Manager, Web Designer</p>
+										<p><h6>Responsibilities:</h6> project estimation, planing, technical documentaion, task decompositon, team management, prototyping, landing page design, outsourcing</p>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-6 project-achivements">
 										<h6>Project achivements</h6>
@@ -192,7 +255,8 @@
 								<li class="row project">
 									<div class="col-xs-12 col-sm-6 col-md-6 project-description">
 										<h5>INTARI Picket Navigator</h5> — <p>design project of android GIS application for gas pipeline builders and servicemans.</p>
-										<p>Role: UI/UX Designer</p>
+										<p><h6>Role:</h6> UI/UX Designer</p>
+										<p><h6>Responsibilities:</h6> design research, prototyping, graphic concept design,UI design, graphic design, design presentation, android layouts, testing, work with feedback</p>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-6 project-achivements">
 										<h6>Project achivements</h6>
@@ -216,7 +280,8 @@
 								<li class="row project">
 									<div class="col-xs-12 col-sm-6 col-md-6 project-description">
 										<h5>Nexi Taxi</h5> — <p>design project of taxi app for iOS and Anroid.</p>
-										<p>Role: UI/UX Designer</p>
+										<p><h6>Role:</h6> UI/UX Designer</p>
+										<p><h6>Responsibilities:</h6> design research, prototyping, graphic concept design, graphic design</p>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-6 project-achivements">
 										<h6>Project achivements</h6>
@@ -238,7 +303,8 @@
 								<li class="row project">
 									<div class="col-xs-12 col-sm-6 col-md-6 project-description">
 										<h5>ddgcorp.ru</h5> — <p>company website</p>
-										<p>Role: Web Designer</p>
+										<p><h6>Role:</h6> Web Designer</p>
+										<p><h6>Responsibilities:</h6> web design, front-end</p>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-6 project-achivements">
 										<h6>Project achivements</h6>
@@ -313,17 +379,21 @@
 								<li class="row project">
 									<div class="col-xs-12 col-sm-6 col-md-6 project-description">
 										<h5>Bloobls(unreleased)</h5> — <p>point-and-tap tablet game for kids</p>
-										<p>Role: Project Manager, UI/UX Consultant</p>
+										<p><h6>Role:</h6> Project Manager, UI/UX Consultant</p>
+										<p><h6>Responsibilities:</h6> design research, prototyping, user research, play test organization and preparation, game design document, team recruitment, team management, project presentation.</p>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-6 project-achivements">
 										<h6>Project achivements</h6>
 										<ul class="achivements-list">
 											<li>Conducted design research to define most effective ways game could communicate with kids</li>
-											<li>Created team of artists and developers around project</li>
+											<li>Recruited team of artists and developers for this project</li>
 											<li>Created video prototypes of game elements</li>
+											<li>Maintained game design documentation on basecamp</li>
 											<li>Completed production of first game stage</li>
 											<li>Completed production of beta version</li>
-											<li>Created system of metrics for play test</li>
+											<li>Created system of metrics for play testing</li>
+											<li>Presented project at DevGAMM Moscow 2014 with all team</li>
+											<li>Presented project at WN Mobile Games Conference 2014 with game designer</li>
 										</ul>
 										<h6>Personal achivements</h6>
 										<ul class="achivements-list">
@@ -350,6 +420,7 @@
 										<h6>Personal achivements</h6>
 										<ul class="achivements-list">
 											<li>Learned outsource and croudsource strategy</li>
+											<li>Experimented with different techniques to create graphics</li>
 										</ul>
 									</div>
 								</li>
@@ -386,7 +457,8 @@
 								<li class="row project">
 									<div class="col-xs-12 col-sm-6 col-md-6 project-description">
 										<h5>of.is(unreleased)</h5> — <p>web app which aimed to provide universal representation of small business online</p>
-										<p>Role: UI/UX Designer</p>
+										<p><h6>Role:</h6> UI/UX Designer</p>
+										<p><h6>Responsibilities:</h6> prototyping, graphic design, web design, A/B tests, front-end, design documentation.</p>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-6 project-achivements">
 										<h6>Project achivements</h6>
@@ -438,6 +510,8 @@
 								<li class="row project">
 									<div class="col-xs-12 col-sm-6 col-md-6 project-description">
 										<h5>ARCAI</h5> — <p>website for NGO Arctic Art Institute and it's projects. It is ongoing project now</p>
+										<p><h6>Role:</h6> web designer</p>
+										<p><h6>Responsibilities:</h6>web design, front-end</p>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-6 project-achivements">
 										<h6>Project achivements</h6>
@@ -452,6 +526,8 @@
 								<li class="row project">
 									<div class="col-xs-12 col-sm-6 col-md-6 project-description">
 										<h5>Fall In Love Hostel</h5> — <p>website for hostel</p>
+										<p><h6>Role:</h6> web designer</p>
+										<p><h6>Responsibilities:</h6> web design, front-end, graphic design outsource, animation design</p>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-6 project-achivements">
 										<h6>Project achivements</h6>
@@ -470,12 +546,14 @@
 								<li class="row project">
 									<div class="col-xs-12 col-sm-6 col-md-6 project-description">
 										<h5>Rostelekom EBZ</h5> — <p>web app for internal use by support operators in call-centre</p>
+										<p><h6>Role:</h6> junior web designer</p>
+										<p><h6>Responsibilities:</h6> prototyping</p>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-6 project-achivements">
 										<h6>Project achivements</h6>
 										<ul class="achivements-list">
 											<li>Designed home screen from scratch</li>
-											<li>Created interactive prototypes for 3 series of user testing</li>
+											<li>Created interactive prototypes for 2 series of user testing</li>
 										</ul>
 										<h6>Personal achivements</h6>
 										<ul class="achivements-list">
@@ -531,6 +609,17 @@
 								<!-- position -->
 								<div class="position col-xs-12">
 									<div class="row">
+										<h5 class="position-name col-xs-6">IT Manager</h5>
+										<div class="period col-xs-6">
+											<span class="since">October 2011</span>
+											<span class="till">June 2013</span>
+										</div>
+									</div>
+								</div>
+								<!-- end position -->
+								<!-- position -->
+								<div class="position col-xs-12">
+									<div class="row">
 										<h5 class="position-name col-xs-6">Fashion Designer</h5>
 										<div class="period col-xs-6">
 											<span class="since">August 2011</span>
@@ -548,7 +637,8 @@
 								<li class="row project">
 									<div class="col-xs-12 col-sm-6 col-md-6 project-description">
 										<h5>ZENIT</h5> — <p>casual wear for fans of football club ZENIT in Saint Petersburg</p>
-										<p>Role: Production Manager, Technical Designer</p>
+										<p><h6>Role:</h6> Production Manager, Technical Designer</p>
+										<p><h6>Responsibilities:</h6> pattern design, technical drawing, technical documentation, supply chain communication, QA</p>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-6 project-achivements">
 										<h6>Project achivements</h6>
@@ -571,7 +661,8 @@
 								<li class="row project">
 									<div class="col-xs-12 col-sm-6 col-md-6 project-description">
 										<h5>Spring/Summer 2011</h5> — <p>menswear collection</p>
-										<p>Role: Fashion Designer</p>
+										<p><h6>Role:</h6> Fashion Designer</p>
+										<p><h6>Responsibilities:</h6> patter design, technical drawing, technical documentation, fittings</p>
 									</div>
 									<div class="col-xs-12 col-sm-6 col-md-6 project-achivements">
 										<h6>Project achivements</h6>
@@ -624,7 +715,7 @@
 										<h6>Project achivements</h6>
 										<ul class="achivements-list">
 											<li>Designed and tailored 10 models for 5 looks</li>
-											<li>Created collection of shoes in collaboration with Shoe Designer</li>
+											<li>Created collection of shoes in collaboration with shoe designer</li>
 										</ul>
 										<h6>Personal achivements</h6>
 										<ul class="achivements-list">
@@ -684,7 +775,7 @@
 				<h3 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Skills</h3>
 				<!-- Skills list -->
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 skill-list">
-					<h4>Programming Languages &amp; Frameworks</h4>
+					<h4>Programming &amp; Tools</h4>
 					<ul>
 						<li class="label label-default" data-progress="60">HTML5</li>
 						<li class="label label-default" data-progress="70">CSS3</li>
@@ -703,7 +794,7 @@
 						<li class="label label-default" data-progress="20">Android Layouts</li>
 						<li class="label label-default" data-progress="20">R</li>
 						<li class="label label-default" data-progress="20">D3</li>
-						<li class="label label-default" data-progress="30">SQLight</li>
+						<li class="label label-default" data-progress="10">SQLight</li>
 					</ul>
 				</div>
 				<!-- end Skills list -->
@@ -719,6 +810,8 @@
 						<li class="label label-default" data-progress="100">A/B Testing</li>
 						<li class="label label-default" data-progress="100">User Testing</li>
 						<li class="label label-default" data-progress="100">Wireframing</li>
+						<li class="label label-default" data-progress="100">Mockups</li>
+						<li class="label label-default" data-progress="100">Layouts</li>
 						<li class="label label-default" data-progress="100">Responsive Design</li>
 						<li class="label label-default" data-progress="100">Mobile First</li>
 						<li class="label label-default" data-progress="100">Design in Browser</li>
@@ -726,6 +819,8 @@
 						<li class="label label-default" data-progress="100">iOS Application Design</li>
 						<li class="label label-default" data-progress="100">Web Application Design</li>
 						<li class="label label-default" data-progress="100">User Stories</li>
+						<li class="label label-default" data-progress="100">Customer Jorney Map</li>
+						<li class="label label-default" data-progress="100">Paper Prototypes</li>
 						<li class="label label-default" data-progress="100">User Needs Research</li>
 						<li class="label label-default" data-progress="100">Customer Jorney Map</li>
 					</ul>
@@ -767,6 +862,9 @@
 						<li class="label label-default" data-progress="100">Design Documentation</li>
 						<li class="label label-default" data-progress="100">Tracking Deadlines</li>
 						<li class="label label-default" data-progress="100">Project Reports</li>
+						<li class="label label-default" data-progress="100">Asana</li>
+						<li class="label label-default" data-progress="100">Basecamp</li>
+						<li class="label label-default" data-progress="100">uTrack</li>
 					</ul>
 				</div>
 				<!-- end Skills list -->
@@ -828,13 +926,13 @@
 					<ul>
 						<!-- Degree -->
 						<li class="degree">
-							<h5>Incomplete Higher</h5> - <p>Computer Science, Aplicable Informatics in Economy</p>
+							<h5>Incomplete Bachelores Degree</h5> - <p>Computer Science, Aplicable Informatics in Economy</p>
 							<p>TUSUR, Tomsk State University of Control Systems and Radio-electronics, Online Education Faculty  2014 - 2018</p>
 						</li>
 						<!-- end Degree -->
 						<!-- Degree -->
 						<li class="degree">
-							<h5>Incomplete Higher</h5> - <p>Fashion Design, Constructional Design of Sewn Products</p>
+							<h5>Incomplete Bachelores Degree</h5> - <p>Fashion Design, Constructional Design of Sewn Products</p>
 							<p>SUTD/RINPO, Saint Petersburg University of Technology and Design, Russian Institute of Continuous Education, Constructional Design of Garment Faculty 2010 - 2012</p>
 						</li>
 						<!-- end Degree -->
@@ -879,19 +977,32 @@
 					<ul>
 						<li>Traveling</li>
 						<li>Film Photography</li>
-						<li></li>
+						<li>Arcitecture</li>
+						<li>Technologie</li>
+						<li>Industrial Design</li>
+						<li>Contemporary Art</li>
+						<li>Movies</li>
 					</ul>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4 personal-list">
 					<h4>Qualities</h4>
 					<ul>
-						<li>HTML</li>
+						<li>Persistent</li>
+						<li>Goal-oriented</li>
+						<li>Quick Learner</li>
+						<li>Idealist</li>
+						<li>Occasional Perfectionist</li>
+						<li>Inquisitive</li>
+						<li>Resilient</li>
 					</ul>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4 personal-list">
 					<h4>Social Life</h4>
 					<ul>
-						<li>HTML</li>
+						<li>Exhibitions visitor and participant</li>
+						<li>Networking</li>
+						<li>Couchsurfing</li>
+						<li>Social networks</li>
 					</ul>
 				</div>
 			</div>
@@ -917,6 +1028,16 @@
 		<!-- bower:js -->
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
 		<script src="/bower_components/holderjs/holder.js"></script>
+		<script src="/bower_components/get-style-property/get-style-property.js"></script>
+		<script src="/bower_components/get-size/get-size.js"></script>
+		<script src="/bower_components/eventie/eventie.js"></script>
+		<script src="/bower_components/doc-ready/doc-ready.js"></script>
+		<script src="/bower_components/eventEmitter/EventEmitter.js"></script>
+		<script src="/bower_components/matches-selector/matches-selector.js"></script>
+		<script src="/bower_components/fizzy-ui-utils/utils.js"></script>
+		<script src="/bower_components/masonry/dist/masonry.pkgd.js"></script>
+		<script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
+		<script src="/bower_components/imagesloaded/imagesloaded.pkgd.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
