--- a/client/portfolio/category-page.html
+++ b/client/portfolio/category-page.html
@@ -1,4 +1,7 @@
 <template name="categoryPage">
+{{#if readiness}}
+
+	{{#if category}}
 	<div class="category-cover">
 		<div class="content">
 			{{>Template.dynamic template=textContent data=category}}
@@ -7,13 +10,48 @@
 			{{>Template.dynamic template=navContent data=category}}
 		</div>
 	</div>
-	<div class="background-container dynamic_color">
+	<div class="background-container" style="background-color:{{category.color}}">
 		{{>Template.dynamic template=imagery data=category.image}}
 	</div>
-
 	<div class="gallery">
-		{{>Template.dynamic template=galleryContent data=projects}}
+		<div class="grid">
+			{{#each item in projects}}
+			<div class="item">
+				<a href="{{url item}}" title="{{item.title}}">
+					<h4>{{item.title}}</h4>
+					<img src="/cfs/files/images/{{item.image}}" class="img-responsive" alt="">
+				</a>
+			</div>
+			{{/each}}
+			{{#each item in attachements}}
+			<div class="item">
+			{{#if typeIs item "File"}}
+				<a href="/cfs/files/files/{{item.file}}" class="file_download" title="{{item.title}}" download="{{filename item.file}}">
+					<h4>{{item.title}}</h4>
+					<img src="/cfs/files/images/{{item.image}}" class="img-responsive" alt="">
+					<div class="icon">
+						{{> SVGicon name="download"}}
+					</div>
+				</a>
+			{{else}}
+				<a href="{{item.url}}" title="{{item.title}}" target="_blank">
+					<h4>{{item.title}}</h4>
+					<img src="/cfs/files/images/{{item.image}}" class="img-responsive" alt="">
+					<div class="icon">
+						{{> SVGicon name="newWindow"}}
+					</div>
+				</a>
+			{{/if}}
+			</div>
+			{{/each}}
+		</div>
 	</div>
+	{{else}}
+		{{> errPage}}
+	{{/if}}
+{{else}}
+	{{>loadingState}}
+{{/if}}
 </template>
 
 
@@ -39,24 +77,13 @@
 		<ul class="item-list">
 			{{#each category in categories}}
 				<li class="item {{#if isCurrentCategory category._id}} active {{/if}}">
-					<a class="dynamic_color" href="{{url category}}" title="{{category.title}}" data-color="{{category.color}}">{{category.title}}</a>
+					<a type="button" class="dynamic_color" href="{{url category}}" title="{{category.title}}" data-color="{{category.color}}">
+						<h6>{{category.title}}</h6>
+					</a>
 				</li>
 			{{/each}}
 		</ul>
 		{{>navMenu icon="true" color=globalPallet.utility}}
 	</nav>
 
-</template>
-
-<template name="galleryGrid">
-	<div class="grid">
-		{{#each item in this}}
-		<div class="item">
-			<a href="{{url item}}" title="{{item.title}}">
-				<h4>{{item.title}}</h4>
-				<img src="/cfs/files/images/{{item.image}}" class="img-responsive" alt="">
-			</a>
-		</div>
-		{{/each}}
-	</div>
 </template>
