landing page and graphics

--- a/client/dummy.html
+++ b/client/dummy.html
@@ -1,4 +1,8 @@
 <template name="dummy">
-  <h1>There is something constantly going on</h1>
-  <h2>You just have to know exactly what... ;)</h2>
+	<div id="dummy-page">
+	  <div id="container">
+	    <h1 class="type-animation">There is something constantly going on</h1>
+	    <h2 class="type-animation">You just have to know exactly what... ;-)</h2>
+	  </div>
+	</div>
 </template>
