--- a/client/error.html
+++ b/client/error.html
@@ -8,8 +8,10 @@
 		<h6>The page you were looking for does not exist.</h6>
 
 		<a href="/" title="Home">Sad to see you here, please go home</a>
-		<a id="goHome" type="button" href="/" title="Home">
-			<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-		</a>
+		<div id="circleView">
+			<a id="goHome" type="button" href="/" title="Home">&nbsp;</a>
+			{{>SVGicon name='home'}}
+		</div>
+		
 	</div>
 </template>
