interface inconsistency fixes

--- a/client/landing/landing.html
+++ b/client/landing/landing.html
@@ -1,6 +1,6 @@
 <template name="landingPage">
     <div class="page landing-page" style="background-color:{{currentSlide.backgroundColor}};">
-    
+
         {{>pageOverlay}}
 
         {{>topLevelMenu color=globalPallet.utility}}
@@ -22,7 +22,7 @@
             <!-- button content -->
             {{#if button}}
                 <div class="slide-btn">
-                    <a class="slide-link-btn js_slide_link" type="button" href="{{#if button.link}}{{button.link}}{{else}}#{{/if}}" title="{{button.text}}">{{button.text}}</a>
+                    <a class="slide-link-btn cta-color js_slide_link" type="button" href="{{#if button.link}}{{button.link}}{{else}}#{{/if}}" title="{{button.text}}">{{button.text}}</a>
                 </div>
             {{/if}}
 
