hint controller, navigation path controller

--- a/client/portfolio/category-page.html
+++ b/client/portfolio/category-page.html
@@ -29,7 +29,7 @@
 				<a href="/cfs/files/files/{{item.file}}" class="file_download" title="{{item.title}}" download="{{filename item.file}}">
 					<h4>{{item.title}}</h4>
 					<img src="/cfs/files/images/{{item.image}}" class="img-responsive" alt="">
-					<div class="icon">
+					<div class="icon utility-background">
 						{{> SVGicon name="download"}}
 					</div>
 				</a>
@@ -37,7 +37,7 @@
 				<a href="{{item.url}}" title="{{item.title}}" target="_blank">
 					<h4>{{item.title}}</h4>
 					<img src="/cfs/files/images/{{item.image}}" class="img-responsive" alt="">
-					<div class="icon">
+					<div class="icon utility-background">
 						{{> SVGicon name="newWindow"}}
 					</div>
 				</a>
