--- a/client/portfolio/project-page.html
+++ b/client/portfolio/project-page.html
@@ -88,11 +88,11 @@
 	{{>navMenu}}
 
 	<nav class="relative-nav">
-		<a tabindex="2" type="button" href="{{prevPortfolioPageURL}}" class="nav-plate dynamic_color" title="Previous">
+		<a tabindex="2" type="button" href="#" class="js_prev_by_order nav-plate dynamic_color" title="Previous">
 			<!-- <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> -->
 			{{> SVGicon name="arrowPrev"}}
 		</a>
-		<a tabindex="3" type="button" href="{{nextPortfolioPageURL}}" class="nav-plate dynamic_color" title="Next">
+		<a tabindex="3" type="button" href="#" class="js_next_by_order nav-plate dynamic_color" title="Next">
 			<!-- <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> -->
 			{{> SVGicon name="arrowNext"}}
 		</a>
