--- a/client/main.html
+++ b/client/main.html
@@ -31,6 +31,18 @@
 </head>
 
 <body lang="en">
+<!-- browser-update -->
+<script> 
+var $buoop = {c:2}; 
+function $buo_f(){ 
+ var e = document.createElement("script"); 
+ e.src = "//browser-update.org/update.min.js"; 
+ document.body.appendChild(e);
+};
+try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
+catch(e){window.attachEvent("onload", $buo_f)}
+</script> 
+
 <div id="SVG_defs">
   {{>SVGsymbols}}
 </div>
