bug fix, back cover

--- a/client/main.html
+++ b/client/main.html
@@ -28,6 +28,21 @@
   <meta name="msapplication-square150x150logo" content="/img/favicon/mstile-150x150.png" />
   <meta name="msapplication-wide310x150logo" content="/img/favicon/mstile-310x150.png" />
   <meta name="msapplication-square310x310logo" content="/img/favicon/mstile-310x310.png" />
+
+  <noscript>
+    <style>
+      body {
+        font-size: 32px;
+        text-align: center;
+      }
+      body:after {
+        margin-top: 30%;
+        display: block;
+        content: "Please enable JavaScript \A in your browser \A to view this site.";
+        white-space: pre;
+      }
+    </style>
+  </noscript>
 </head>
 
 <body lang="en">
