--- a/client/portfolio/project-page.html
+++ b/client/portfolio/project-page.html
@@ -127,7 +127,7 @@
 		</ul>
 
 		{{#if buttonText}}
-		<a tabindex="1" class="learn-more-btn" type="button" href="{{detailsURL}}" title="{{buttonText}}">{{buttonText}}</a>
+		<a tabindex="1" class="learn-more-btn js_current_by_order" type="button" href="#" title="{{buttonText}}">{{buttonText}}</a>
 		{{/if}}
 	</div>
 </template>
