--- a/client/portfolio/cover-page.html
+++ b/client/portfolio/cover-page.html
@@ -26,36 +26,39 @@
 	<div class="background-container">
 		{{>Template.dynamic template=imagery data=cover.image}}	
 	</div>
-	<div class="portfolio-cover back-cover">
+	<div class="back-cover">
 		<div class="nav-container">
 			{{>navMenu icon="true"}}
 		</div>
+		<div class="gratitude">
 		<h1>Thank you!</h1>
-		<p>That's it, you've seen all projects. I hope it was a pleasant journey.</p>
-		{{#if session 'consent' 'experiment'}}
-		<p>Information about study is available to you under {{>SVGicon name='metrics'}} icon in menu on top</p>
-		{{/if}}
-		<p></p>
-
+			<p>That's it, you've seen all projects. I hope it was a pleasant journey.</p>
+			<!-- metrics -->
+			{{#if showMetrics }}
+			<p>Information about study is available to you under {{>SVGicon name='metrics'}} icon in menu on top.</p>
+			{{/if}}
+		</div>
 		<div class="exits">
-			<div class="start-over">
-				<a class="js_next_by_order" href="#" title="Back to start">
-					{{>SVGicon name="startOver"}}
-					<h3>Back to start</h3>
-				</a>
-			</div>
 			<div class="keep-in-touch">
 				<div class="dialog-form">
-					<form id="emailForm">
+					<form id="keepInTouchForm">
 						<div class="sender-info">
-							{{>formField label_text="Would you like to keep in touch?" name="email" placeholder="Please enter your email address" type="email" value=email isRequired=true}}
+							{{>formField label_text="Shall I contact you?" name="email" placeholder="Please enter your email address" type="email" value=email isRequired=true inlineFormID="keepInTouchEmail"}}
 						</div>
 					</form>
 				</div>
 			</div>
+
+			<div class="start-over">
+				<a class="js_next_by_order" href="#" title="Back to start">
+					{{>SVGicon name="startOver"}}
+					<h5>Back to start</h5>
+				</a>
+			</div>
 		</div>
 		<div class="copy-right">
-			
+			<h6>{{>SVGicon name="cc"}}<span>Portfolio project — CC-BY-SA a.nvlkv {{dateY dateOfIssue}}</span></h6>
+			<h6>{{>SVGicon name="c"}}<span>Content - a.nvlkv {{dateY dateOfIssue}}</span></h6>
 		</div>
 	</div>
 	{{else}}
