improved navigation, googleapis. trying out ga-extractor

--- a/client/admin/portfolio.html
+++ b/client/admin/portfolio.html
@@ -377,7 +377,7 @@
       <div class="form-group">
         {{#if afFieldValueIs name="type" value="File"}}
           {{> afQuickField name="file"}}
-          {{> afQuickField name="extension"}}
+          <!-- {{> afQuickField name="extension"}} -->
         {{else}}
           {{> afQuickField name="url"}}
         {{/if}}
