--- a/client/landing/landing-graphics.html
+++ b/client/landing/landing-graphics.html
@@ -245,11 +245,11 @@
 				<symbol id="salesman-features-side">
 					<g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 				        <g id="salesman-features-side">
-				            <g id="salesman-features" transform="translate(159.000000, 80.000000)" stroke="#000000" stroke-width="5">
+				            <g id="salesman-features" transform="translate(159.000000, 80.000000)" stroke="currentColor" stroke-width="5">
 				                <path d="M0,31 C0,38.8367402 17.9033947,45.1896733 39.9883513,45.1896733" id="Oval-1-Copy-6"></path>
 				                <ellipse id="Oval-15-Copy" cx="11.4430296" cy="6.43471445" rx="6.44302958" ry="6.43471445"></ellipse>
 				            </g>
-				            <path d="M199.615468,63.4200104 C188.458489,47.8413233 170.178584,37.6857481 149.520541,37.6857481 C125.372085,37.6857481 104.473286,51.5630453 94.4032375,71.7582315 C116.961401,69.7873802 137.770278,69.021213 143.087681,74.7051245 C155.999996,74.7051208 167.825391,46.7467929 167.825391,46.7467929 C167.825391,46.7467929 180.218342,55.6591308 199.615468,63.4200104 L199.615468,63.4200104 Z" id="Combined-Shape" fill="#000000"></path>
+				            <path d="M199.615468,63.4200104 C188.458489,47.8413233 170.178584,37.6857481 149.520541,37.6857481 C125.372085,37.6857481 104.473286,51.5630453 94.4032375,71.7582315 C116.961401,69.7873802 137.770278,69.021213 143.087681,74.7051245 C155.999996,74.7051208 167.825391,46.7467929 167.825391,46.7467929 C167.825391,46.7467929 180.218342,55.6591308 199.615468,63.4200104 L199.615468,63.4200104 Z" id="Combined-Shape" fill="currentColor"></path>
 				        </g>
 				    </g>
 				</symbol>
@@ -287,7 +287,7 @@
 
 				<symbol id="artist-features-front">
 					<g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-					    <g id="visual-artist-features-front" stroke="#000000" stroke-width="5">
+					    <g id="visual-artist-features-front" stroke="currentColor" stroke-width="5">
 					        <g id="Group" transform="translate(96.000000, 67.000000)">
 					            <path d="M22.3486932,0.71875 C1.59509091,14.0726372 4.95251331,38.4771513 4.95251331,38.4771513 C5.25605526,39.0315756 6.92348053,50.6300506 1.30016396,62.1776646" id="Line"></path>
 					            <path d="M85,0.71875 C105.753602,14.0726372 102.39618,38.4771513 102.39618,38.4771513 C102.090466,39.0355426 100.401282,50.7965926 106.170358,62.4255258" id="Line-Copy"></path>
@@ -331,6 +331,36 @@
 </template>
 
 	<!-- 4th slide graphics -->
+
+<template name="graphics_iterativeImprovement">
+<svg width="1111px" height="703px" viewBox="0 0 1111 703" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <title>Process of iterative improvement</title>
+    <desc>Improve by iterating through analyses, ideation, prototyping and testing</desc>
+    <defs></defs>
+    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <g id="iterative_process">
+            <path d="M157,471.013109 C157,238.494025 345.494025,50 578.013109,50 C764.028142,50 914.822891,200.795926 914.822891,386.810958 C914.822891,535.622278 794.186856,656.258313 645.374359,656.258313 C526.325068,656.258313 429.816241,559.749485 429.816241,440.700194 C429.816241,345.46029 507.022832,268.253699 602.262736,268.253699 C678.454659,268.253699 740.219932,330.018972 740.219932,406.210895 C740.219932,467.163962 690.80842,516.576652 629.854175,516.576652 C581.09125,516.576652 541.561569,477.046971 541.561569,428.284046 C541.561569,389.273471 573.185785,357.649256 612.19636,357.649256 C643.403879,357.649256 668.703486,382.948863 668.703486,414.157559 C668.703486,439.124045 648.464271,459.36326 623.497785,459.36326 C603.524597,459.36326 587.332283,443.172123 587.332283,423.198935 C587.332283,407.219677 600.286369,394.266768 616.264449,394.266768 C629.047855,394.266768 639.409947,404.62886 639.409947,417.412266 C639.409947,427.637813 631.119567,435.928193 620.89402,435.928193 C612.713111,435.928193 606.080101,429.29636 606.080101,421.115451 C606.080101,414.570724 611.386509,409.264316 617.931236,409.264316 C623.167018,409.264316 627.411673,413.508972 627.411673,418.744753 C627.411673,422.934085 624.015713,426.330045 619.827559,426.330045 C616.476329,426.330045 613.759561,423.613277 613.759561,420.262047 C613.759561,417.58177 615.932505,415.407649 618.613959,415.407649 C620.758652,415.407649 622.497243,417.146239 622.497243,419.290932" id="improvement_path" stroke="currentColor" stroke-width="5"></path>
+            <circle id="iteration_state" fill="#393737" cx="157.5" cy="470.5" r="10.5"></circle>
+            <text id="Analyze" font-family="SkyhookMono, Skyhook Mono" font-size="30" font-weight="normal" fill="#333333">
+                <tspan x="9" y="467">Analyze</tspan>
+            </text>
+            <text id="Ideate" font-family="SkyhookMono, Skyhook Mono" font-size="30" font-weight="normal" fill="#333333">
+                <tspan x="482" y="26">Ideate</tspan>
+            </text>
+            <text id="Prototype" font-family="SkyhookMono, Skyhook Mono" font-size="30" font-weight="normal" fill="#333333">
+                <tspan x="936" y="360">Prototype</tspan>
+            </text>
+            <text id="Test" font-family="SkyhookMono, Skyhook Mono" font-size="30" font-weight="normal" fill="#333333">
+                <tspan x="636" y="692">Test</tspan>
+            </text>
+        </g>
+    </g>
+</svg>
+	
+</template>
+
+
+	<!-- 5th slide graphics -->
 
 <template name="graphics_empoweredIndividual">
 	<svg class="orientation-portrait" width="599px" height="768px" viewBox="0 0 599 768" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
