--- a/client/portfolio/cover-page.html
+++ b/client/portfolio/cover-page.html
@@ -2,7 +2,7 @@
 {{#if readiness}}
 	{{#if cover}}
 	<div class="background-container">
-		{{>Template.dynamic template=imagery data=cover.image}}	
+		{{>Template.dynamic data=cover.image template=imagery}}	
 	</div>
 	<div class="portfolio-cover">
 		<div class="content" >
@@ -24,7 +24,7 @@
 {{#if readiness}}
 	{{#if cover}}
 	<div class="background-container">
-		{{>Template.dynamic template=imagery data=cover.image}}	
+		{{>Template.dynamic data=cover.image template=imagery}}	
 	</div>
 	<div class="back-cover">
 		<div class="nav-container">
