--- a/client/admin/navigation-panel-admin.html
+++ b/client/admin/navigation-panel-admin.html
@@ -20,7 +20,7 @@
           <li class="{{#if isCurrentPage 'wip'}} active {{/if}}"><a href="/admin/wip">WIP</a></li>
           <li class="{{#if isCurrentPage 'files'}} active {{/if}}"><a href="/admin/files">Files</a></li>
           <li class="{{#if isCurrentPage 'messages'}} active {{/if}}"><a href="/admin/messages">Messages</a></li>
-          <li class="{{#if isCurrentPage 'messages'}} active {{/if}}"><a href="/admin/abtests">A|B</a></li>
+          <!-- <li class="{{#if isCurrentPage 'messages'}} active {{/if}}"><a href="/admin/abtests">A|B</a></li> -->
   			</ul>
   			<div class="nav navbar-nav navbar-right">
   				{{>atNavButton}}
