--- a/client/main.html
+++ b/client/main.html
@@ -83,6 +83,7 @@ catch(e){window.attachEvent("onload", $buo_f)}
 
 
 <template name="mainLayout">
+    {{>notifications}}
     {{>pageOverlay}}
 
     {{>Template.dynamic template=content}}
