--- a/client/landing/landing.html
+++ b/client/landing/landing.html
@@ -3,8 +3,10 @@
 
     <div class="page landing-page" style="background-color:{{currentSlide.backgroundColor}};">
 
-        {{>topLevelMenu color=globalPallet.utility}}
+        {{>topLevelMenu}}
         
+
+
         {{#with currentSlide}}
         <div class="slide {{layout}}" style="color:{{textColor}};">
 
@@ -17,16 +19,18 @@
             <div class="slide-text">
                 <h3>{{title}}</h3>
                 <p>{{text}}</p>
+
+                <!-- button content -->
+                {{#if button}}
+                    <div class="slide-btn">
+                        <a class="slide-link-btn cta-color js_slide_link" type="button" href="{{#if button.link}}{{button.link}}{{else}}#{{/if}}" title="{{button.text}}">
+                            <span>{{button.text}}</span>
+                        </a>
+                    </div>
+                {{/if}}
             </div>
 
-            <!-- button content -->
-            {{#if button}}
-                <div class="slide-btn">
-                    <a class="slide-link-btn cta-color js_slide_link" type="button" href="{{#if button.link}}{{button.link}}{{else}}#{{/if}}" title="{{button.text}}">
-                        <span>{{button.text}}</span>
-                    </a>
-                </div>
-            {{/if}}
+           
 
         </div>
         {{/with}}
