fixed cover start page, enable delete

--- a/client/portfolio/cover-page.html
+++ b/client/portfolio/cover-page.html
@@ -88,8 +88,13 @@
 				</h4>
 			</div>
 		</div>
+		<nav class="relative-nav">
+			<a type="button" tabindex="1" href="#" class="js_next_by_time nav-plate cta-color" title="Follow the timeline of projects">
+				<h3>Projects in timeline</h3>
+			</a>
+		</nav>
 		<div class="nav-hint">
-			<p>Follow the timeline of projects</p>
+			<!-- <p>Follow the timeline</p> -->
 			<p>{{> SVGicon name="swipeUp"}}
 			{{> SVGicon name="arrowKeyDown"}}</p>
 		</div>
@@ -104,12 +109,12 @@
 	<!-- <div class="spacer">&nbsp;</div> -->
 	<div class="navigation-plate utility-background">
 		<nav class="relative-nav">
-			<a type="button" tabindex="1" href="{{coverPageButtonUrl}}" class="nav-plate cta-color" title="Hi! Start here">
-				<h3>Start here!</h3>
+			<a type="button" tabindex="1" href="#" class="js_next_by_order nav-plate cta-color" title="Explore projects by order">
+				<h3>Projects by order</h3>
 			</a>
 		</nav>
 		<div class="nav-hint">
-			<p>Explore projects by order</p>
+			<!-- <p>Explore projects by order</p> -->
 			<p>{{> SVGicon name="swipeLeft"}}
 			{{> SVGicon name="arrowKeyRight"}}
 			{{> SVGicon name="click"}}
