--- a/client/portfolio/portfolio.html
+++ b/client/portfolio/portfolio.html
@@ -1,7 +1,7 @@
 <template name="portfolio">
 	<!-- page wrapper -->
-	<!-- {{#momentum plugin='animate-css' sKlass='page'}} -->
-	<div class="page">
+	{{#momentum plugin='animate-css' sKlass='page' timeout=2500}}
+	<!-- <div class="page"> -->
 	{{#if readiness}}
 
 		{{>Template.dynamic template=pageType}}
@@ -9,7 +9,7 @@
 	{{else}}
 		{{>loadingState}}
 	{{/if}}
-	</div>
-	<!-- {{/momentum}} -->
+	<!-- </div> -->
+	{{/momentum}}
 	
 </template>
