scrollable slides on landing; removing momentum

--- a/client/landing/landing-graphics.html
+++ b/client/landing/landing-graphics.html
@@ -1,6 +1,6 @@
 <template name="graphicsContainer">
 	<div class="svg-graphics">
-		{{> Template.contentBlock patchColor=patchColor}}
+		{{> Template.contentBlock patchColor=patchColor graphics=graphics}}
 	</div>
 </template>
 
