minor fixes, updated navigation directions

--- a/client/portfolio/cover-page.html
+++ b/client/portfolio/cover-page.html
@@ -95,8 +95,8 @@
 		</nav>
 		<div class="nav-hint">
 			<!-- <p>Follow the timeline</p> -->
-			<p>{{> SVGicon name="swipeUp"}}
-			{{> SVGicon name="arrowKeyDown"}}</p>
+			<p>{{> SVGicon name="swipeLeft"}}
+			{{> SVGicon name="arrowKeyRight"}}</p>
 		</div>
 	</div>
 
@@ -115,8 +115,8 @@
 		</nav>
 		<div class="nav-hint">
 			<!-- <p>Explore projects by order</p> -->
-			<p>{{> SVGicon name="swipeLeft"}}
-			{{> SVGicon name="arrowKeyRight"}}
+			<p>{{> SVGicon name="swipeUp"}}
+			{{> SVGicon name="arrowKeyDown"}}
 			{{> SVGicon name="click"}}
 			{{> SVGicon name="keyEnter"}}</p>
 		</div>
